fix(oblique/material): correct button ripple staying visible after click
- problem was only seen in nav sub menu back button, button examples were working fine

OUI-2177

--- a/projects/oblique/src/styles/scss/material/_mat-button.scss
+++ b/projects/oblique/src/styles/scss/material/_mat-button.scss
@@ -83,7 +83,11 @@
 				.mat-ripple {
 					&.mat-mdc-button-ripple {
 						.mat-ripple-element {
-							opacity: 1;
+							opacity: 0;
+
+							@at-root #{selector.append(".cdk-focused", &)} {
+								opacity: 1;
+							}
 						}
 					}
 				}
